--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,7 @@
         background: rgb(30, 91, 137);
       }
       .spinner {
-        margin-top: 100px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 100px auto auto auto;
         width: 50px;
         height: 40px;
         text-align: center;
